# NeuralNetworkCPP

./: CMakeLists.txt  main.cpp
Matrix/: matrix.cpp  matrix.h
NeuralNetwork/: ActivationLayer.cpp  ActivationLayer.h  DenseLayer.cpp  DenseLayer.h  Layer.cpp  Layer.h  Network.cpp  Network.h  NeuralNetwork.cpp  NeuralNetwork.h
Test/: test.cpp  test.h
